syntax = "proto3";

package user_proto;

option go_package = "./;user_proto";


service UserService {
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc GetProvider(GetProviderRequest) returns (ProviderResponse);
}

message GetUserRequest {
    string id = 1;
}

message GetProviderRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message ProviderResponse {
    string id = 1;
    string type = 2;
    string name = 3;
    string email = 4;
}
